--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-starter-es6-babel-bootstrap",
+  "name": "react-material-ui-starter",
   "browserify": {
     "transform": [
       "babelify"
@@ -15,10 +15,11 @@
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
     "ecstatic": "~0.8.0",
-    "react": "~0.13.3",
+    "material-ui": "^0.13.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-tap-event-plugin": "^0.2.1",
     "uglify-js": "^2.4.24",
-    "watchify": "^3.2.3",
-    "react": "~0.13.3",
-    "react-bootstrap": "^0.25.2"
+    "watchify": "^3.2.3"
   }
 }
