--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   "scripts": {
     "build": "browserify main.jsx > public/bundle.js",
     "build-prod": "NODE_ENV=production browserify main.jsx | uglifyjs -cm > public/bundle.js",
-    "start": "ecstatic -p 8000 public & open http://localhost:8000",
+    "start": "live-server",
     "watch": "watchify main.jsx -o public/bundle.js -dv"
   },
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
-    "ecstatic": "~0.8.0",
     "material-ui": "^0.13.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
